# Wasserstoff_AiIntern_Task

./: .gitignore  .replit  Dockerfile  README.md  document_metadata.json  main.py  project.txt  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: file_utils.py
backend/app/models/: document.py
backend/app/services/: document_processor.py  llm_service.py  ocr_service.py  theme_identifier.py  vector_store.py
chroma_db/: chroma.sqlite3
static/css/: custom.css
static/js/: main.js
templates/: index.html  layout.html
