[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.9",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "groq>=0.24.0",
    "gunicorn>=23.0.0",
    "openai>=1.78.1",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
